{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 5,
  "lineage": "70fa5d2f-62e3-52a1-40cf-0ca1fd5c9d13",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-23T05:50:54.248-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "lbg-fw-allow-bastion",
            "name": "lbg-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/networks/lbg-dev-vpc",
            "priority": 1000,
            "project": "cloudclub",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/firewalls/lbg-fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-23T05:50:54.995-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "lbg-fw-allow-http",
            "name": "lbg-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/networks/lbg-dev-vpc",
            "priority": 1000,
            "project": "cloudclub",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/firewalls/lbg-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-23T05:50:54.511-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "lbg-fw-allow-internal",
            "name": "lbg-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/networks/lbg-dev-vpc",
            "priority": 1000,
            "project": "cloudclub",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/firewalls/lbg-fw-allow-internal",
            "source_ranges": [
              "10.26.1.0/24",
              "10.26.2.0/24",
              "10.26.3.0/24",
              "10.26.4.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.euw2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google"
    },
    {
      "module": "module.euw1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "lbg-dev-vpc",
            "name": "lbg-dev-vpc",
            "project": "cloudclub",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudclub/global/networks/lbg-dev-vpc"
          }
        }
      ]
    }
  ]
}